--- a/index.html
+++ b/index.html
@@ -44,11 +44,26 @@
         </section>
         <section>
             <h2>Education</h2>
-            <table border="1">
+            <table border="1" cellpadding="10" cellspacing="0">
                 <tr>
                     <th>Program</th>
                     <th>Institution</th>
                     <th>Year Graduated</th>
+                </tr>
+                <tr>
+                    <th>Kinder</th>
+                    <th>Taguanao</th>
+                    <th>2010</th>
+                </tr>
+                <tr>
+                    <th>Elementary</th>
+                    <th>Taguanao</th>
+                    <th>2017</th>
+                </tr>
+                <tr>
+                    <th>High School</th>
+                    <th>CDO-JHS</th>
+                    <th>2022</th>
                 </tr>
                 <tr>
                     <th>College</th>
